<resources>
    <string name="app_name">ActivityTest</string>
    <string name="textview">TextView</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="button_two">button two</string>
    <string name="startchrome">启动浏览器</string>
    <string name="buttonthree">buttonThree</string>
    <string name="sendDataActivitythree">传递数据给ActivityThree</string>
    <string name="nodata">nodata</string>
    <string name="getmedata">我需要返回数据</string>
</resources>
